font trial, header positioning

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -2,12 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  .logo-container {
-    
-    img {
-      height: 60px;
-      width: 100px;
-    }
-  }
+  background: transparent;
+  padding-block: 2rem;
+  padding-inline: 5rem;
 }
