--- a/src/scss/Nav.scss
+++ b/src/scss/Nav.scss
@@ -1,8 +1,20 @@
 .Nav {
-
   .bar-icon {
     padding-block-start: .3rem;
     font-size: 2rem;
     cursor: pointer;
+  }
+
+  &.showNav {
+    .link-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        padding-block: 1rem;
+      }
+    }
   }
 }
