--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,7 @@ body {
   font-family: 'Cinzel Decorative', cursive,
     sans-serif;
   font-size: 1.6rem;
+  font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
