mobile menu positioning

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -1,7 +1,9 @@
 .Header {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 8rem;
   background: transparent;
   padding-block: 2rem;
   padding-inline: 5rem;
