--- a/src/scss/_Nav.scss
+++ b/src/scss/_Nav.scss
@@ -1,3 +1,6 @@
+@use './variables.scss' as v;
+@use './functions.scss' as f;
+
 .Nav {
   .bar-icon {
     padding-block-start: .3rem;
@@ -6,11 +9,23 @@
   }
 
   &.showNav {
+    .bar-icon {
+      position: relative;
+      z-index: 5;
+    }
+
     .link-container {
+      position: fixed;
+      top: 0;
+      left: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      width: 100%;
+      background: v.$transparentBg;
+      color: inherit;
+      padding-block-start: 6rem;
 
       a {
         padding-block: 1rem;
