--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 $transparentBg: hsla(0, 0%, 0%, 0.85);
 $textDefault: #f0f3ff;
 $textAlternate: hsl(229, 75%, 41%);
-$textHover: hsl(216, 84%, 48%);
+$textHover: hsl(216, 78%, 77%);
+$textShadow: 0 0 3px hsl(212, 80%, 66%);
