--- a/src/scss/_Nav.scss
+++ b/src/scss/_Nav.scss
@@ -21,20 +21,17 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       width: 100%;
       background: v.$transparentBg;
-      padding-block-start: 6rem;
+      padding-block-start: 10rem;
+      z-index: 4;
+      height: 100%;
 
       a {
         padding-block: 1rem;
         font-size: 1.9rem;
         letter-spacing: 1.5px;
-
-        // &:hover {
-        //   color: v.$textAlternate;
-        //   text-shadow: v.$textHover;
-        // }
       }
     }
   }
