--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,10 +12,12 @@ html {
 }
 
 body {
-  font-family: 'Cinzel Decorative', cursive,
-  sans-serif;
+  // font-family: 'Cinzel Decorative', cursive,
+  // sans-serif;
+  font-family: 'Unica One', cursive, sans-serif;
   font-size: 1.6rem;
   font-weight: 700;
+  text-transform: uppercase;
   background-color: #000;
   color: f.setTextColor(#000);
   -webkit-font-smoothing: antialiased;
