--- a/src/scss/_Hero.scss
+++ b/src/scss/_Hero.scss
@@ -1,4 +1,5 @@
 @use './variables' as v;
+@use './mixins' as mx;
 
 .Hero {
   position: relative;
@@ -6,10 +7,8 @@
   text-align: center;
   height: calc(100% - 8rem);
   background-image: v.$backgroundGradient;
-  display: flex;
+  @include mx.flexStart;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   padding-block-start: 11rem;
 
   &::before {
@@ -20,6 +19,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    margin-block-start: -8rem;
     opacity: .11;
   }
 
@@ -42,9 +42,7 @@
     }
 
     .tech-list {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
+      @include mx.flexAround;
       flex-wrap: wrap;
       width: 75%;
       line-height: 3;
