--- a/src/scss/_Nav.scss
+++ b/src/scss/_Nav.scss
@@ -1,5 +1,6 @@
-@use './variables.scss' as v;
-@use './functions.scss' as f;
+@use './variables' as v;
+@use './functions' as f;
+@use './mixins' as mx;
 
 .Nav {
   .bar-icon {
@@ -18,20 +19,24 @@
       position: fixed;
       top: 0;
       left: 0;
-      display: flex;
+      @include mx.flexStart;
       flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
       width: 100%;
       background: v.$transparentBg;
       padding-block-start: 10rem;
       z-index: 4;
       height: 100%;
+      
 
       a {
         padding-block: 1rem;
         font-size: 1.9rem;
         letter-spacing: 1.5px;
+        cursor: pointer;
+        // @include mx.mq(768px) {
+        //   margin-inline: 2rem;
+        //   z-index: 6;
+        // }
       }
     }
   }
