json file for storing project information

--- a/src/scss/_Hero.scss
+++ b/src/scss/_Hero.scss
@@ -7,6 +7,8 @@
   padding-block-start: 11rem;
 
   &-logo-ctnr {
+    max-width: 70.5rem;
+    
     @include mx.mq(768px) {
       width: 70%;
     }
