portfolio page component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,7 +14,8 @@ html {
 body {
   // font-family: 'Cinzel Decorative', cursive,
   // sans-serif;
-  font-family: 'Caudex', serif;
+  // font-family: 'Caudex', serif;
+  font-family: 'Marcellus SC', serif;
   font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase;
