--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -40,7 +40,12 @@
           width: 100%;
           background-color: v.$transparentBg;
           letter-spacing: .15rem;
+          line-height: 1.4;
           padding-block: 1rem;
+
+          p:first-child {
+            text-decoration: underline;
+          }
         }
       }
     }
