--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -3,7 +3,7 @@
 @use './functions' as f;
 
 .Portfolio {
-  position: relative;
+  // position: relative;
   height: 100%;
   padding-block-end: 2rem;
   
@@ -25,10 +25,33 @@
     .port-item-link {
       width: 100%;
       height: 100%;
+
+      &:hover .overlay{
+        inset: 0;
+        transition: inset .3s ease;
+      }
       
       &-content {
         position: relative;
+        height: 100%;
+        overflow: hidden;
         
+        .overlay {
+          position: absolute;
+          top: -50%;
+          left: -100%;
+          display: grid;
+          background-color: v.$transparentBg;
+          height: calc(100% - 7rem);
+          width: 100%;
+          transition: inset .4s ease-in-out;
+
+          p {
+            align-self: center;
+            line-height: 2;
+          }
+        }
+
         img {
           width: 100%;
         }
@@ -38,6 +61,7 @@
           bottom: 0;
           left: 0;
           width: 100%;
+          height: 7rem;
           background-color: v.$transparentBg;
           letter-spacing: .15rem;
           line-height: 1.4;
