--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -18,7 +18,7 @@
   &-links-container {
     @include mx.flexCenter;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     width: 85%;
     margin-inline: auto;
     
@@ -26,9 +26,15 @@
       width: 100%;
       height: 100%;
 
-      &:hover .overlay{
-        inset: 0;
-        transition: inset .3s ease;
+      &:hover {
+        .overlay-content {
+          inset: 0;
+          transition: inset .3s ease-in-out .2s;
+        }
+        .overlay-bg {
+          inset: 0;
+          transition: inset .4s ease-in-out;
+        }
       }
       
       &-content {
@@ -36,20 +42,30 @@
         height: 100%;
         overflow: hidden;
         
-        .overlay {
+        .overlay-content {
           position: absolute;
-          top: -50%;
-          left: -100%;
+          left: -50%;
+          top: -100%;
           display: grid;
-          background-color: v.$transparentBg;
-          height: calc(100% - 7rem);
           width: 100%;
-          transition: inset .4s ease-in-out;
+          height: calc(100% - 7rem);
+          padding-inline: 2rem;
+          z-index: 1;
+          transition: inset .3s ease-in-out;
 
           p {
             align-self: center;
             line-height: 2;
           }
+        }
+
+        .overlay-bg {
+          position: absolute;
+          left: 100%;
+          width: 100%;
+          height: calc(100% - 7rem);
+          background-color: v.$transparentBg;
+          transition: inset .4s ease-in-out;
         }
 
         img {
