--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -13,6 +13,9 @@
     line-height: 1.6;
     margin-inline: auto;
     margin-block: 2rem;
+    @include mx.mq(768px) {
+      margin-block: 5rem;
+    }
   }
 
   &-links-container {
@@ -21,10 +24,22 @@
     gap: 3rem;
     width: 85%;
     margin-inline: auto;
+
+    @include mx.mq(768px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
     
     .port-item-link {
       width: 100%;
       height: 100%;
+
+      &:last-child {
+        @include mx.mq(768px) {
+          grid-column: 1 / -1;
+        }
+
+      }
 
       &:hover {
         .overlay-content {
