--- a/src/scss/_About.scss
+++ b/src/scss/_About.scss
@@ -1,4 +1,5 @@
 @use './mixins' as mx; 
+@use './variables' as v;
 
 .About {
   @include mx.flexStart;
@@ -30,16 +31,29 @@
   &-info-container {
     @include mx.flexCenter;
     width: 80%;
+    padding-block: 3rem;
 
     img {
-      height: 30rem;
-      width: 30rem;
+      height: 25rem;
+      width: 25rem;
       border-radius: 50%;
+      object-fit: cover;
     }
 
     p {
       padding-inline: 7rem;
       line-height: 2;
+    }
+  }
+
+  a {
+    i {
+      margin-inline-end: 2rem;
+    }
+
+    &:hover {
+      color: #aa2626;
+      text-shadow: 0 0 50rem hsl(0, 0%, 0%);
     }
   }
 }
