hover orbit animation

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,4 +3,4 @@ $backgroundGradient: radial-gradient(at 78% 128%, rgba(255, 0, 0, 0.08) 10%, hsl
 $textDefault: #f0f3ff;
 $textAlternate: hsl(229, 75%, 41%);
 $textHover: hsl(216, 78%, 77%);
-$textShadow: 0 0 .25rem hsl(212, 80%, 66%);
+$textShadow: 0 0 .2rem hsla(212, 80%, 66%, 0.5);
