--- a/src/scss/_About.scss
+++ b/src/scss/_About.scss
@@ -31,7 +31,7 @@
   &-info-container {
     @include mx.flexCenter;
     width: 80%;
-    padding-block: 3rem;
+    padding-block: 3rem 0;
 
     img {
       height: 25rem;
@@ -46,14 +46,66 @@
     }
   }
 
-  a {
-    i {
-      margin-inline-end: 2rem;
+  &-contact-animation-container {
+    position: relative;
+    height: 9rem;
+    width: 9rem;
+    border-radius: 50%;
+    transform: scaleX(3);
+
+    a {
+      .route {
+        width: 100%;
+        height: 100%;
+        
+        .plane {
+          position: absolute;
+          left: 0;
+          top: 40%;
+          margin-inline-start: -1rem;
+          display: block;
+          height: 1.6rem;
+          width: 5rem;
+          font-size: 1.6rem;
+          transform: scale(.4, 1);
+        }
+      }
+      
+      &:hover {
+        .route {
+          animation: orbit 4s infinite linear;
+
+          .plane {
+            animation: correctScale 4s infinite linear;
+          }
+        }
+      }
     }
 
-    &:hover {
-      color: #aa2626;
-      text-shadow: 0 0 50rem hsl(0, 0%, 0%);
+    p {
+      position: absolute;
+      top: 50%;
+      width: 12rem;
+      transform: scaleX(0.38) translate(-30%, -50%);
     }
+  }
+}
+
+@keyframes orbit {
+  0% {
+    transform: rotateZ(0deg)
+  } 100% {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes correctScale {
+  20% {
+    transform: scale(.5, .4);
+  } 40% {
+    transform: scale(.5, .4);
+  } 64% {
+    transform: scale(.7, 1);
+  } 80% {
+    transform: scale(.4, 1);
   }
 }
