--- a/src/scss/_About.scss
+++ b/src/scss/_About.scss
@@ -5,14 +5,16 @@
   @include mx.flexStart;
   flex-direction: column;
   height: calc(100vh - 80px);
-  padding-block-start: 5rem;
+  // height: 100%;
+  @include mx.mq(768px) {
+    padding-block-start: 5rem;
+  }
   @include mx.mq(1024px) {
     height: calc(100vh - 100px);
   }
 
   &-logo-container {
     max-width: 70.5rem;
-    
     @include mx.mq(768px) {
       width: 70%;
     }
@@ -30,8 +32,11 @@
 
   &-info-container {
     @include mx.flexCenter;
-    width: 80%;
-    padding-block: 3rem 0;
+    max-width: 90rem;
+    @include mx.mq(768px) {
+      padding-block: 3rem 0;
+      width: 80%;
+    }
 
     img {
       height: 25rem;
