--- a/src/scss/_Contact.scss
+++ b/src/scss/_Contact.scss
@@ -11,10 +11,19 @@
   h1 {
     font-size: 2.5rem;
     padding-block: 5rem;
+    @include mx.mq(768px) {
+      font-size: 2.8rem;
+      padding-block-start: 7rem;
+    }
+    @include mx.mq(1024px) {
+      font-size: 3.3rem;
+      padding-block-start: 8rem;
+    }
   }
 
   form {
     width: 80%;
+    max-width: 68rem;;
     margin-inline: auto;
 
     .form-control {
