--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,6 @@
 $transparentBg: hsla(0, 0%, 0%, 0.85);
 $backgroundGradient: radial-gradient(at 78% 128%, rgba(255, 0, 0, 0.08) 10%, hsl(0, 0%, 0%)50%);
 $textDefault: #f0f3ff;
-$textAlternate: hsl(229, 75%, 41%);
-$textHover: hsl(216, 78%, 77%);
 $textShadow: 0 0 .5rem hsla(212, 80%, 66%, 0.5);
 $boxShadow: 0 0 2rem hsl(199, 100%, 50%);
-$inputFocus: hsl(199, 100%, 50%);
+$neonBlue: hsl(199, 100%, 50%);
