--- a/src/scss/_Contact.scss
+++ b/src/scss/_Contact.scss
@@ -50,7 +50,7 @@
 
         &:focus {
           border: 1px solid v.$neonBlue; 
-          box-shadow: v.$boxShadow;
+          box-shadow: v.$neonBlueBoxShadow;
           outline: none;
         }
       }
@@ -66,7 +66,7 @@
         &:hover, &:focus {
           border: 1px solid v.$neonBlue; 
           background-color: v.$neonBlue;
-          box-shadow: v.$boxShadow;
+          box-shadow: v.$neonBlueBoxShadow;
           outline: none;
         }
       }
