--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,5 +2,9 @@ $transparentBg: hsla(0, 0%, 0%, 0.85);
 $backgroundGradient: radial-gradient(at 78% 128%, rgba(255, 0, 0, 0.08) 10%, hsl(0, 0%, 0%)50%);
 $textDefault: #f0f3ff;
 $textShadow: 0 0 .5rem hsla(212, 80%, 66%, 0.5);
-$boxShadow: 0 0 2rem hsl(199, 100%, 50%);
+$neonBlueBoxShadow: 0 0 2rem hsl(199, 100%, 50%);
 $neonBlue: hsl(199, 100%, 50%);
+$neonBlueOpaque: hsla(199, 100%, 50%, 0.2);
+
+$lineGradient-up: linear-gradient(hsla(0, 100%, 50%, 0.6) 40%, transparent);
+$lineGradient-down: linear-gradient(transparent, hsla(0, 100%, 50%, 0.6) 40%);
