--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -33,11 +33,11 @@
       width: 100%;
       height: 100%;
 
-      &:last-child {
-        @include mx.mq(768px) {
-          transform: translateX(50%);
-        }
-      }
+      // &:last-child {
+      //   @include mx.mq(768px) {
+      //     transform: translateX(50%);
+      //   }
+      // }
 
       &:hover {
         .overlay-content {
