--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -30,7 +30,7 @@
 }
 
 @mixin mqh($size) {
-  @media screen and (min-width: $size) {
+  @media screen and (min-height: $size) {
     @content;
   }
 }
