--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -33,11 +33,15 @@
       width: 100%;
       height: 100%;
 
+      // *** Use below if Odd Number of Projects ***
+
       // &:last-child {
       //   @include mx.mq(768px) {
       //     transform: translateX(50%);
       //   }
       // }
+
+      // *** Use above if Odd Number of Projects ***
 
       &:hover {
         .overlay-content {
@@ -68,7 +72,11 @@
 
           p {
             align-self: center;
-            line-height: 2;
+            line-height: 1.5;
+
+            @include mx.mqh(361px) {
+              line-height: 2;
+            }
           }
         }
 
@@ -93,8 +101,12 @@
           height: 7rem;
           background-color: v.$transparentBg;
           letter-spacing: .15rem;
-          line-height: 1.4;
+          line-height: 1.2;
           padding-block: 1rem;
+
+          @include mx.mqh(361px) {
+            line-height: 1.4;
+          }
 
           p:first-child {
             text-decoration: underline;
