--- a/src/scss/_PortfolioItem.scss
+++ b/src/scss/_PortfolioItem.scss
@@ -37,9 +37,10 @@
     margin-inline: auto;
 
     h1 {
-      padding-block: 10rem 5rem;
+      padding-block: 7rem 3rem;
       @include mx.mq(768px) {
-        padding-block: 5rem;
+        font-size: 2.8rem;
+        padding-block: 5rem 3rem;
       }
     }
 
@@ -90,9 +91,9 @@
       }
     }
 
-
     &-features {
       margin-block-start: 2rem;
+      height: auto;
       
       li {
         padding-block: .5rem;
