--- a/src/scss/_Hero.scss
+++ b/src/scss/_Hero.scss
@@ -34,7 +34,11 @@
     margin-block-start: 2.5rem;
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.6rem;
+      
+      @include mx.mq(768px) {
+        font-size: 2.8rem;
+      }
     }
 
     .tech-list {
