swap icon source, footer setup

--- a/src/scss/_PortfolioItem.scss
+++ b/src/scss/_PortfolioItem.scss
@@ -19,13 +19,12 @@
       text-shadow: none;
     }
     
-    i {
+    .icon {
       color: #aa2626;
-      font-size: 4rem;
+      font-size: 2rem;
     }
 
     p {
-      margin-inline-start: -.5rem;
       font-size: 1rem;
       letter-spacing: 1px;
     }
