--- a/src/scss/_About.scss
+++ b/src/scss/_About.scss
@@ -5,9 +5,7 @@
   @include mx.flexStart;
   flex-direction: column;
   height: calc(100vh - 80px);
-  @include mx.mq(768px) {
-    padding-block-start: 5rem;
-  }
+  padding-block-start: 5rem;
   @include mx.mq(1024px) {
     height: calc(100vh - 100px);
   }
@@ -56,9 +54,12 @@
     height: 9rem;
     width: 9rem;
     border-radius: 50%;
+    margin-block-start: 2rem;
     transform: scaleX(3);
 
     a {
+      
+
       .route {
         width: 100%;
         height: 100%;
