--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -33,15 +33,9 @@ a:hover {
   text-shadow: v.$textShadow;
 }
 
-.Layout {
-  overflow: hidden;
-}
+// .Layout {
+//   overflow: hidden;
+// }
 
-main {
-  position: relative;
-  z-index: 0;
-}
 
-.hidden {
-  display: none;
-}
+
