--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -18,17 +18,21 @@
     margin-inline: auto;
 
     a {
-      // transition: scale 1s ease;
       .icon {
         display: inline-block;
         font-size: 2rem;
         z-index: 15;
-      }
+        transition: all .5s ease;
 
+        &:hover {
+          transition: all .5s ease;
+          transform: scale(1.6);
+        }
+      }
+      
       &:hover {
-        color:v.$altHoverColor;
-        transform: scale(1.6);
         transition: scale 1s ease;
+        color:v.$altHoverColor;
       }
     }
   }
@@ -39,7 +43,7 @@
     height: 8rem;
     width: 8rem;
     background-color: v.$neonBlueOpaque;
-    box-shadow: -5.5px -9.5px 1.5rem hsl(199, 100%, 50%);
+    box-shadow: -4px -4px 1rem hsl(199, 100%, 50%);
     z-index: 11;
     cursor: pointer;
     transition: all 1s ease;
@@ -52,7 +56,5 @@
     color: v.$altHoverColor;
     cursor: pointer;
     transition: all 1s ease;
-
-
   }
 }
