--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -16,3 +16,19 @@ main {
 .hidden {
   display: none;
 }
+
+// CSS Transition Group
+.page-enter {
+  opacity: 0;
+}
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+.page-exit {
+  opacity: 1;
+}
+.page-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+}
