--- a/src/scss/_Contact.scss
+++ b/src/scss/_Contact.scss
@@ -16,8 +16,7 @@
   }
 
   form {
-    width: 80%;
-    max-width: 68rem;;
+    width: min(100% - 3rem, 68rem);
     margin-inline: auto;
 
     .form-control {
