--- a/src/scss/_ContactSuccess.scss
+++ b/src/scss/_ContactSuccess.scss
@@ -2,16 +2,9 @@
 
 .ContactSuccess {
   .logo-container {
-    max-width: 70.5rem;
+    width: min(100% - 3rem, 70.5rem);
     margin-inline: auto;
     padding-block-start: 11rem;
-    
-    @include mx.mq(768px) {
-      width: 70%;
-    }
-    @include mx.mq(1024px) {
-      width: 50%;
-    }
 
     img {
       padding-inline-start: 2rem;
