--- a/src/scss/_Hero.scss
+++ b/src/scss/_Hero.scss
@@ -5,20 +5,11 @@
 .Hero {
   @include mx.flexStart;
   flex-direction: column;
-  background-color: transparent;
-  // width: min(100% - 3rem, 70.5rem);
-  // margin-inline: auto;
+  width: min(100% - 3rem, 70.5rem);
+  margin-inline: auto;
 
   &-logo-container {
-    padding-block-start: 11rem;
-    max-width: 70.5rem;
-    
-    @include mx.mq(768px) {
-      width: 70%;
-    }
-    @include mx.mq(1024px) {
-      width: 50%;
-    }
+    padding-block-start: 10rem;
 
     img {
       padding-inline-start: 2rem;
