--- a/src/scss/_About.scss
+++ b/src/scss/_About.scss
@@ -9,6 +9,9 @@
   &-logo-container {
     width: min(100% - 3rem, 70.5rem);
     margin-inline: auto;
+    @include mx.mqh(1080px) {
+      margin-block-start: 10rem;
+    }
 
     img {
       padding-inline-start: 2rem;
