--- a/src/scss/_Hero.scss
+++ b/src/scss/_Hero.scss
@@ -10,6 +10,9 @@
 
   &-logo-container {
     padding-block-start: 10rem;
+    @include mx.mqh(1080px) {
+      margin-block-start: 10rem;
+    }
 
     img {
       padding-inline-start: 2rem;
