tap info added for mobile devices

--- a/src/scss/_Portfolio.scss
+++ b/src/scss/_Portfolio.scss
@@ -119,6 +119,13 @@
             line-height: 1.4;
           }
 
+          p {
+            font-size: 1.6rem;
+            @include mx.mq(768px) {
+              font-size: 1.8rem;
+            }
+          }
+
           p:first-child {
             text-decoration: underline;
           }
