--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -57,4 +57,29 @@
     cursor: pointer;
     transition: all 1s ease;
   }
+
+  .about-link {
+    position: absolute;
+    top: -4.5rem;
+    left: .6rem;
+    display: block;
+    width: 6rem;
+    font-size: 1.3rem;
+
+    @include mx.mq(620px) {
+      top: 25%;
+      left: 5%;
+    }
+    
+    @include mx.mq(900px) {
+      left: 10%;
+    }
+
+    &:hover {
+      color: v.$altHoverColor;
+      text-shadow: none;
+      transform: scale(1.1);
+      transition: all .5s ease;
+    }
+  }
 }
