--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -22,7 +22,7 @@
     }
 
     a:hover {
-      background-image: v.$hoverMovingGradient;
+      background-image: v.$movingGradient;
       background-clip: text;
       color: transparent;
       background-size: 1200%;
