--- a/src/scss/_AboutSite.scss
+++ b/src/scss/_AboutSite.scss
@@ -50,7 +50,7 @@
       font-size: 1.4rem;
 
       a {
-        background-image: v.$hoverMovingGradient;
+        background-image: v.$movingGradient;
         background-size: 1400%;
         background-clip: text;
         background-position: top left;
