--- a/src/scss/_Missing.scss
+++ b/src/scss/_Missing.scss
@@ -1,4 +1,5 @@
 @use './mixins' as mx;
+@use './variables' as v;
 
 .Missing {
   .container {
@@ -22,7 +23,21 @@
     }
     
     a {
+      display: inline-block;
       font-size: 2.8rem;
+      background-image: v.$movingGradient;
+      background-size: 2200%;
+      background-position: top left;
+      background-clip: text;
+      color: transparent;
+      animation: bg-movement 4s infinite alternate;
+      transition: all .5s ease;
+
+      &:hover {
+        transform: scale(1.1);
+        transition: all .5s ease;
+        text-shadow: none;
+      }
     }
   }
 }
